Fri Jan 19 09:27:44 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/powercom.c: fix a typo which produce a segfault on Solaris 10,
   and another typo on a debug message (from Jürgen Lesny)

2.0.5

Mon Jan 15 15:01:12 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - include/version*: Final version number bump for release.

Sat Jan 13 13:50:15 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - data/driver.list: added "Trust PW-4120M" as supported by megatec

Fri Jan  5 19:15:13 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/cmdvartab: added ups.realpower, ups.realpower.nominal,
   input.frequency.low, input.frequency.high and battery.capacity

Thu Jan  4 20:08:50 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel.c: remove trailing spaces and leading zero's
   from values read from UPS (except for enumerated ones that could
   be used for setting variables)
 - common/common.c, include/common.h: let 'rtrim' function return
   pointer to the trimmed string (to make it easier to use in
   dstate_setinfo calls, will be silently discarded if not used)

2.0.5-pre2

Thu Jan  4 14:37:20 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - include/version*: bump to 2.0.5-pre2.
 - NEWS: some update for the powerpanel driver

Wed Jan  3 12:03:50 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - scripts/hotplug-ng/nut-usbups.hotplug.in: removed since it is
   not needed anymore now that udev enabled systems have removed
   the legacy hotplug compatibility
 - scripts/hotplug-ng/README: udpate the documentation
 - scripts/hotplug-ng/nut-usbups.rules.in : fix the udev rules syntax
   (Henrique de Moraes Holschuh) [Alioth Bug #303696]
 - configure.in: update for the udev changes

Wed Jan  3 11:32:12 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel.ch, man/powerpanel.8: added powerpanel driver
 
 Tue Jan  2 02:02:35 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
