@@ -1,3 +1,7 @@
+Fri Jan 26 22:35:00 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>
+
+ - libhid.c: improved formatting of usage paths (ported from trunk)
+
 Fri Jan 19 09:27:44 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
 
  - drivers/powercom.c: fix a typo which produce a segfault on Solaris 10,
